<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Learning</string>
    <string name="preference_butt">Настройки</string>
    <string name="stop_butt">Остановить</string>
    <string name="start_butt">Запустить</string>
    <string name="webActivity_butt">To WebView</string>
    <string name="preffs_top">Настройки</string>
    <string name="serviceControll_text">Управление сервисом оповещений</string>
    <string name="BootRunService_Check">Запускать автоматически сервис при включении устройства</string>
    <string name="updatePeriod_text">Интервал обновления слов</string>
    <string name="dataBaseControl_text">Управление базой данных</string>
    <string name="updateDataBase_button">Обновить базу</string>
    <string name="VIEWversions_text">Поддерживаемые версии</string>
    <string name="VIEWdeskription_text">Описание</string>
    <string name="VIEWparameters_text">Входные параметры</string>
    <string name="VIEWoutput_text">Возвращаемые значения</string>
    <string name="VIEWerrors_text">Ошибки</string>
    <string name="VIEWexample_text">Пример</string>
    <string name="VIEWexample_result_text">Результат</string>
    <string name="menu_file_title">Настройки</string>
    <string name="create_new_menu">Новое меню</string>
    <string name="open_menu">Открыть</string>
    <string name="search_hint">Название функции</string>
    <string name="main_text">Функции PHP</string>

</resources>